3 Aug 2009 (svn.debian.org/tux4kids -revision 1349)
[Sarah Frisk <ssfrisk@gmail.com> }
	-Worked on removing file function.  Currently doesn't work.

3 Aug 2009 (svn.debian.org/tux4kids - revision 1348)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed drawing issues.  Program now correctly loads Word List Editor Main screen
	after going to the word list editor and/or using various other buttons (New Word 
	List)

3 Aug 2009 (svn.debian.org/tux4kids - revision 1346)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Added button text
	- made it so that the New Word List function is only
	called when someone clicks on the New' button

3 Aug 2009 (svn.debian.org/tux4kids - revision 1344)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Set all buttons in editor to the wordlist_button, which is
	a blank button that can be written over, and fits in the smaller
	version of the program.

3 Aug 2009 (svn.debian.org/tux4kids - revision 1343)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Changed button sizes for the wordlist_button
	- Worked on fixing up program

3 Aug 2009 (svn.debian.org/tux4kids - revision 1337)
[Sarah Frisk <ssfrisk@gmail.com> ]
	-  Worked on the function to create new word list
	-  Added buttons

	-Code in editor.c is now active.
2 Aug 2009 (svn.debian.org/tux4kids - revision 1336)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed drawing issues in editor.c, everything now draws correctly in the ChooseListToEdit(). 
	-Code in editor.c is now active.


02 Aug 2009 (svn.debian.org/tux4kids - revision 1334)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - ChooseListToEdit() and EditWordList() in editor.h/c now used by program, old functions
        commented out.  Code cleanup ongoing.  Added two more copies of NewWordList.png - to be
        edited into buttons for "Remove" and "Done". Editor page rearranged.

01 Aug 2009 (svn.debian.org/tux4kids - revision 1325)
[ David Bruce <davidstuartbruce@gmail.com> ]